# Basilico

./: .gitignore  Basilico.qrc  CMakeLists.txt  LICENCE.txt  README.md  basil.toml  build.sh  gen.py
autoload/: basilico_gen.vim  basilico_startup.vim  basilico_tabplugin.vim  pakuvim_startup.vim  utils.vim
include/: BasilPlugin.hpp  Basilico.hpp  NeoVim.hpp  PakuVim.hpp
neovim.cpp/: CMakeLists.txt  README.md  gen_api.py
neovim.cpp/include/: neovim.hpp  neovim_ui.hpp  neovim_utils.hpp  nvim_rpc.hpp  socket.hpp
neovim.cpp/include/impl/: nvim_rpc_impl.hpp
neovim.cpp/src/: main.cpp  neovim.cpp  sample.cpp  socket.cpp
neovim.cpp/templates/: neovim.cpp.0  neovim.cpp.1  neovim.hpp  nvim_api.hpp
plugin/: basilico_autocmds.vim  basilico_gen.vim  basilico_startup.vim  pakuvim_startup.vim  utils.vim
sh/: basil  pakuvim  pakuvim.sh
src/: .qmake.stash  BasilPlugin.cpp  Basilico.cpp  NeoVim.cpp  PakuVim.cpp  main.cpp  plugins.cpp
template/: Basilico.hpp  CMakeLists.txt  basilico_autocmds.vim  plugins.cpp
